QA Approv Documentation view