@@ -110,8 +110,13 @@
 <!--            <version>${junit.version}</version>-->
 <!--            <scope>test</scope>-->
 <!--        </dependency>-->
-
         <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client-apache-v2</artifactId>
+            <version>1.47.0</version> <!-- Match your google-http-client-jackson2 version -->
+        </dependency>
+        <dependency>
+
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
             <version>${javafx.version}</version>
@@ -130,6 +135,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <release>17</release>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.httpserver</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -150,6 +162,7 @@
                     <mainClass>${main.class}</mainClass>
                     <verbose>true</verbose>
                     <enableSWRendering>false</enableSWRendering>
+
                     <graalvmHome></graalvmHome>
 
                     <bundlesList></bundlesList>
@@ -167,6 +180,7 @@
 
                     <nativeImageArgs>
                         <arg>--report-unsupported-elements-at-runtime</arg>
+                        <arg>--add-modules=jdk.httpserver</arg>
                     </nativeImageArgs>
                     <linkerArgs></linkerArgs>
                     <runtimeArgs></runtimeArgs>
